--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 body {
   background-color: #e5e5e5;
   color: #757575;
-
   font-family: roboto, suns-serif;
+  letter-spacing: 0.03em;
 }
 :root {
   --color-text: #757575;
@@ -25,7 +25,12 @@ header {
 }
 .link {
   color: var(--color-Link);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
+
 .link:hover {
   color: var(--color-acsent);
 }
@@ -36,32 +41,72 @@ header {
 .main-title {
   color: #ffffff;
   background-color: #2f303a;
+  font-size: 44px;
+  font-weight: 900;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 }
 
 .main-title-link {
   color: #ffffff;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  text-align: center;
 }
 
 .title {
   color: #212121;
+  font-weight: 700d;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
 }
 
 .general-features-title {
   color: #212121;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 
 .text {
   color: var(--color-text);
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+.our-team {
+  background-color: #f5f4fa;
 }
 
 .name {
   color: #212121;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19px;
+  letter-spacing: 0.03em;
 }
-.our-team {
-  background-color: #f5f4fa;
+.name-text {
+  color: #757575;
+  font-size: 16px;
+  line-height: 1.19px;
+  letter-spacing: 0.03em;
 }
+
 footer {
   background-color: #2f303a;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
 }
 .home-address {
   color: #ffffff;
@@ -73,14 +118,26 @@ footer {
 .logo {
   color: var(--color-acsent);
   font-family: raleway;
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
 }
 
 .logo-header {
   color: var(--color-link);
   font-family: raleway;
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
 }
 
 .logo-footer {
   color: #ffffff;
   font-family: raleway;
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
 }
